# customer-value-analytics

./: .dockerignore  .gitattributes  .gitignore  AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: data_guide.md  methods.md
examples/: example_data.json  example_data.xlsx  quick_test.xlsx  transactions.csv
scripts/: generate_examples.py
src/cva/: __init__.py  bgbb.py  bgnbd.py  clv.py  complaints.py  contractual.py  equity.py  investment.py  io.py  markov.py  schema.py  selection.py  templates.py  validation.py
tests/: test_app_pages.py  test_end_to_end.py  test_example_workbooks.py  test_reference_examples.py  test_templates_and_validation.py
