[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-value-analytics"
version = "1.0.0"
description = "Streamlit app for customer value analytics: RFM segmentation, customer lifetime value, customer equity, and classic probabilistic customer-base models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "numpy>=1.24,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.0,<3",
  "plotly>=5.18,<7",
  "scikit-learn>=1.3,<2",
  "scipy>=1.10,<2",
  "statsmodels>=0.14,<1",
  "streamlit>=1.38,<2",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/UlrikErlingsen/customer-value-analytics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

